// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag> Tag em tag 1`] = `
<em
  dangerouslySetInnerHTML={
    Object {
      "__html": "Some text",
    }
  }
/>
`;

exports[`<Tag> Tag h1 1`] = `
<h1
  dangerouslySetInnerHTML={
    Object {
      "__html": "Some text",
    }
  }
/>
`;

exports[`<Tag> Tag strong 1`] = `
<strong
  dangerouslySetInnerHTML={
    Object {
      "__html": "Some text",
    }
  }
/>
`;
